--- a/docs/2019/0325.md
+++ b/docs/2019/0325.md
@@ -18,9 +18,9 @@
 
 ## 优秀文章
 
-### 文章 1
+### 一个比Spring Boot快44倍的Java框架！
 
-[www.baidu.com](http://www.baidu.com)
+[segmentfault](https://segmentfault.com/a/1190000018640630)
 
 ## 工具
 
