--- a/docs/2019/0325.md
+++ b/docs/2019/0325.md
@@ -18,14 +18,16 @@
 
 ## 优秀文章
 
-### 一个比Spring Boot快44倍的Java框架！
+### 一个比 Spring Boot 快 44 倍的 Java 框架！
 
 [segmentfault](https://segmentfault.com/a/1190000018640630)
 
 ## 工具
 
-### 工具 1
+### VSC Netease Music
 
-> 介绍
+> vscode 上的网易云音乐播放器，一遍写代码一遍听音乐
 
-[www.baidu.com](http://www.baidu.com)
+![](https://user-images.githubusercontent.com/26399680/50915155-240ae880-1473-11e9-91b6-731183a6b26a.gif)
+
+[VSC Netease Music](https://marketplace.visualstudio.com/items?itemName=nondanee.vsc-netease-music)
