--- a/docs/2019/0325.md
+++ b/docs/2019/0325.md
@@ -22,6 +22,10 @@
 
 [segmentfault](https://segmentfault.com/a/1190000018640630)
 
+### 我的 WWDC 2019 Scholarship & 来一次完整的使用 Playground（二）
+
+[juejin](https://juejin.im/post/5c972b165188252d6458309a)
+
 ## 工具
 
 ### VSC Netease Music
