--- a/docs/2019/0325.md
+++ b/docs/2019/0325.md
@@ -2,9 +2,9 @@
 
 ## 本周要闻
 
-### 新闻 1
+### Python发布官方中文文档
 
-[www.baidu.com](http://www.baidu.com)
+[中文文档](https://docs.python.org/zh-cn)
 
 ## 开源项目
 
