--- a/docs/2019/0325.md
+++ b/docs/2019/0325.md
@@ -6,6 +6,10 @@
 
 [中文文档](https://docs.python.org/zh-cn)
 
+### 2018图灵奖公布！Hinton、Bengio、LeCun深度学习三巨头共享
+
+[机器之心](https://www.jiqizhixin.com/articles/19032701)
+
 ## 开源项目
 
 ### fyne
@@ -27,6 +31,10 @@
 ### 我的 WWDC 2019 Scholarship & 来一次完整的使用 Playground（二）
 
 [juejin](https://juejin.im/post/5c972b165188252d6458309a)
+
+### Java 8新的时间日期库的20个使用示例
+
+[juejin](https://juejin.im/post/5c9ae4cc6fb9a070aa5cfef2)
 
 ## 工具
 
