--- a/docs/2019/0325.md
+++ b/docs/2019/0325.md
@@ -12,7 +12,7 @@
 
 ## 开源项目
 
-### fyne
+### fyne-io/fyne
 
 <Badge text="Go" type="tip" vertical="middle"/>
 
@@ -21,6 +21,16 @@
 ![](https://github.com/fyne-io/fyne/raw/master/img/widgets-light.png)
 
 [Github](https://github.com/fyne-io/fyne)
+
+### Microsoft/pyright
+
+<Badge text="Python" type="tip" vertical="middle"/>
+
+> 微软开源的 Python 静态类型检查工具
+
+![](https://github.com/Microsoft/pyright/raw/master/docs/img/PyrightLarge.png)
+
+[Github](https://github.com/Microsoft/pyright)
 
 ## 优秀文章
 
