--- a/docs/2019/0325.md
+++ b/docs/2019/0325.md
@@ -55,3 +55,15 @@
 ![](https://user-images.githubusercontent.com/26399680/50915155-240ae880-1473-11e9-91b6-731183a6b26a.gif)
 
 [VSC Netease Music](https://marketplace.visualstudio.com/items?itemName=nondanee.vsc-netease-music)
+
+### Flutter Debugger
+
+> Flutter Debugger 是一个用于调试 Flutter 应用的独立应用程序，基于 Flipper（可扩展的移动应用调试器）并提供更多功能。
+
+![](https://flutter-debugger.blankapp.org/icon.png)
+
+相关文章 
+
+- [开发了个 Flutter Debugger，可以用来调试网络、数据、Redux 等。](https://www.v2ex.com/t/549310)
+
+[Flutter Debugger](https://flutter-debugger.blankapp.org)
