--- a/docs/2019/0325.md
+++ b/docs/2019/0325.md
@@ -32,6 +32,14 @@
 
 [Github](https://github.com/Microsoft/pyright)
 
+### 996icu/996.ICU
+
+<Badge text="Python" type="tip" vertical="middle"/>
+
+> 工作996，住院ICU [996.icu](https://996.icu/#/zh_CN)
+
+[Github](https://github.com/996icu/996.ICU)
+
 ## 优秀文章
 
 ### 一个比 Spring Boot 快 44 倍的 Java 框架！
