--- a/docs/2019/0325.md
+++ b/docs/2019/0325.md
@@ -10,6 +10,10 @@
 
 [机器之心](https://www.jiqizhixin.com/articles/19032701)
 
+### Google Play 重要更新 | 目标 API 等级 2019 年新规定
+
+[谷歌开发者](https://mp.weixin.qq.com/s?__biz=MzAwODY4OTk2Mg==&mid=2652048822&idx=1&sn=b2bd68ca43a9c242f249dcf9b252fddb&chksm=808cadf3b7fb24e5f760d4c3d93ce2b68bf1bed9007d0815a2e44f62398f160aa2df3bdafb87&mpshare=1&scene=23&srcid=0329LGHseWYcFENaTUYoQANG#rd)
+
 ## 开源项目
 
 ### fyne-io/fyne
