--- a/docs/2019/0325.md
+++ b/docs/2019/0325.md
@@ -79,3 +79,11 @@
 - [开发了个 Flutter Debugger，可以用来调试网络、数据、Redux 等。](https://www.v2ex.com/t/549310)
 
 [Flutter Debugger](https://flutter-debugger.blankapp.org)
+
+### IntelliJ IDEA 2019.1 新特性  
+> 更新了 自定义主题、对 Java 12 的新特性等的更强适配以及 Gradle 等 
+[What's new in IntelliJ IDEA](https://www.jetbrains.com/idea/whatsnew/)  
+
+相关文章 
+
+- [IntelliJ IDEA 2019.1 新特性](https://juejin.im/post/5c9c3f70e51d45145b4308f8#heading-8)
