--- a/docs/2019/0325.md
+++ b/docs/2019/0325.md
@@ -44,6 +44,14 @@
 
 [Github](https://github.com/996icu/996.ICU)
 
+### ShizukuIchi/winXP
+
+<Badge text="Javascript" type="tip" vertical="middle"/>
+
+> 基于 Web 的 Windows xp 系统
+
+[Github](https://github.com/ShizukuIchi/winXP)
+
 ## 优秀文章
 
 ### 一个比 Spring Boot 快 44 倍的 Java 框架！
