--- a/docs/2019/0325.md
+++ b/docs/2019/0325.md
@@ -66,6 +66,11 @@
 
 [juejin](https://juejin.im/post/5c9ae4cc6fb9a070aa5cfef2)
 
+### 从 Flutter 的视频渲染到 App 落地经验
+
+[juejin](https://juejin.im/post/5c9c28b251882536a65c85aa)
+
+
 ## 工具
 
 ### VSC Netease Music
