--- a/docs/2019/0325.md
+++ b/docs/2019/0325.md
@@ -50,7 +50,18 @@
 
 > 基于 Web 的 Windows xp 系统
 
+![](https://github.com/ShizukuIchi/winXP/raw/master/demo/demo.gif)
+
 [Github](https://github.com/ShizukuIchi/winXP)
+
+### QSCTech/zju-icicles
+
+<Badge text="Html" type="tip" vertical="middle"/>
+
+> 浙江大学课程攻略共享计划
+
+[Github](https://github.com/QSCTech/zju-icicles)
+
 
 ## 优秀文章
 
