--- a/docs/2019/0325.md
+++ b/docs/2019/0325.md
@@ -81,6 +81,9 @@
 
 [juejin](https://juejin.im/post/5c9c28b251882536a65c85aa)
 
+### 爬楼梯[算法]
+
+[LeetCode](https://leetcode-cn.com/articles/climbing-stairs/)
 
 ## 工具
 
