--- a/docs/2019/0401.md
+++ b/docs/2019/0401.md
@@ -8,15 +8,15 @@
 
 ## 开源项目
 
-### 项目名称
+### zhui-team/zhui
 
-<Badge text="项目语言" type="tip" vertical="middle"/>
+<Badge text="Javascript" type="tip" vertical="middle"/>
 
-> 项目介绍
+> 一款带有中国风的React组件库
 
-![图片](https://图片)
+![Zhui](https://camo.githubusercontent.com/8d83bdafae0a8c071de5a445ff172e503446316b/68747470733a2f2f73322e617831782e636f6d2f323031392f30322f30312f6b33515149492e706e67)
 
-[Github](https://github.com/)
+[Github](https://github.com/zhui-team/zhui)
 
 ## 优秀文章
 
