--- a/docs/2019/0401.md
+++ b/docs/2019/0401.md
@@ -26,10 +26,8 @@
 
 ## 工具
 
-### 工具/软件名称
+### 互联网技术图谱
 
-> 简单介绍
+> 详细列出了学习技术的学习路径
 
-![图片](https://图片地址)
-
-[网址](https://网址)
+[互联网技术图谱](https://techmap.canmeng.net/#)
