--- a/docs/2019/0401.md
+++ b/docs/2019/0401.md
@@ -18,6 +18,14 @@
 
 [Github](https://github.com/zhui-team/zhui)
 
+### doocs/advanced-java
+
+<Badge text="Java" type="tip" vertical="middle"/>
+
+> 互联网 Java 工程师进阶知识完全扫盲
+
+[Github](https://github.com/doocs/advanced-java)
+
 ## 优秀文章
 
 ### 程序员的一天，都是怎样度过的？
