--- a/docs/2019/0401.md
+++ b/docs/2019/0401.md
@@ -2,9 +2,11 @@
 
 ## 本周要闻
 
-### 新闻标题
+### Visual Studio 2019 正式版发布
 
-[说明](https://网址)
+<iframe src="https://channel9.msdn.com/Events/Visual-Studio/Visual-Studio-2019-Launch-Event/Not-your-average-keynote/player" width="960" height="540" allowFullScreen frameBorder="0"></iframe>
+
+[visualstudio](https://visualstudio.microsoft.com/zh-hans/vs/)
 
 ## 开源项目
 
