--- a/docs/2019/0401.md
+++ b/docs/2019/0401.md
@@ -4,7 +4,7 @@
 
 ### Visual Studio 2019 正式版发布
 
-<iframe src="https://channel9.msdn.com/Events/Visual-Studio/Visual-Studio-2019-Launch-Event/Not-your-average-keynote/player" width="960" height="540" allowFullScreen frameBorder="0"></iframe>
+<iframe src="https://channel9.msdn.com/Events/Visual-Studio/Visual-Studio-2019-Launch-Event/Not-your-average-keynote/player?format=html5#ccLang=zh-cn" width="560" height="315" allowFullScreen frameBorder="0"></iframe>
 
 [visualstudio](https://visualstudio.microsoft.com/zh-hans/vs/)
 
