--- a/docs/2019/0401.md
+++ b/docs/2019/0401.md
@@ -41,3 +41,13 @@
 > 详细列出了学习技术的学习路径
 
 [互联网技术图谱](https://techmap.canmeng.net/#)
+
+### WPS Office 2019 For Linux
+
+> WPS Office 2019 For Linux 更新了！
+
+[WPS Office 官方网站](http://www.wps.cn/product/wpslinux)
+
+相关文章
+
+- [更新日志](http://www.wps.cn/product/wpslinuxlog)
