--- a/docs/2019/0401.md
+++ b/docs/2019/0401.md
@@ -8,6 +8,10 @@
 
 [visualstudio](https://visualstudio.microsoft.com/zh-hans/vs/)
 
+### #Meme：Google+ 正式关闭，当年它也曾有趣过
+
+[好奇心日报](http://www.qdaily.com/articles/62664.html)
+
 ## 开源项目
 
 ### zhui-team/zhui
@@ -28,11 +32,26 @@
 
 [Github](https://github.com/doocs/advanced-java)
 
+### codex-team/editor.js
+
+<Badge text="TypeScript" type="tip" vertical="middle"/>
+
+> 下一代 block 风格的编辑器
+
+![](https://camo.githubusercontent.com/678857ab89085c81690b7a4069e266a2b1cc1c30/68747470733a2f2f636170656c6c612e706963732f37396365393436612d643633362d343163642d616139362d6433626335656366646530332e6a7067)
+
+[Github](https://github.com/codex-team/editor.js)
+
+
 ## 优秀文章
 
 ### 程序员的一天，都是怎样度过的？
 
 [简书](https://www.jianshu.com/p/00c62b21eea7)
+
+### 漫话：如何给女朋友解释什么是 Git 和 GitHub ？
+
+[漫话编程](https://mp.weixin.qq.com/s?__biz=Mzg3MjA4MTExMw==&mid=2247485189&idx=1&sn=fbe5c12bb3ebbb61741c6f91082d3557&chksm=cef5f4b3f9827da5423175abe0e114696605d0fe832ddcb9b3fc3e5e84b85b23f4115ac331c1&mpshare=1&scene=23&srcid=0404qLNlZjbbv1XD8yxWbBke#rd)
 
 ## 工具
 
