--- a/docs/2019/0401.md
+++ b/docs/2019/0401.md
@@ -10,7 +10,11 @@
 
 ### #Meme：Google+ 正式关闭，当年它也曾有趣过
 
-[好奇心日报](http://www.qdaily.com/articles/62664.html)
+[好奇心日报](http://www.qdaily.com/articles/62664.html)  
+
+### Android Q Beta 2 已上线  
+
+[谷歌开发者](https://mp.weixin.qq.com/s?__biz=MzAwODY4OTk2Mg==&mid=2652048924&idx=1&sn=72feec29baa7ececd11596d431081134&chksm=808cae59b7fb274f62fc76607c03b46152de356e1c8cefa8499d1ecc400d73c3a3e934a327d5&mpshare=1&scene=23&srcid=0404oIW4Ln5a5ycDV3lPXO77#rd)  
 
 ## 开源项目
 
