--- a/docs/2019/0401.md
+++ b/docs/2019/0401.md
@@ -57,6 +57,14 @@
 
 [漫话编程](https://mp.weixin.qq.com/s?__biz=Mzg3MjA4MTExMw==&mid=2247485189&idx=1&sn=fbe5c12bb3ebbb61741c6f91082d3557&chksm=cef5f4b3f9827da5423175abe0e114696605d0fe832ddcb9b3fc3e5e84b85b23f4115ac331c1&mpshare=1&scene=23&srcid=0404qLNlZjbbv1XD8yxWbBke#rd)
 
+### Java 8 - Stream API 快速入门
+
+[jujin](https://juejin.im/post/5ca628f96fb9a05e3c698c86)
+
+### 打通前后端逻辑，客户端 Flutter 代码一天上线
+
+[阿里云](https://yq.aliyun.com/articles/696432?utm_content=g_1000050617)
+
 ## 工具
 
 ### 互联网技术图谱
@@ -74,3 +82,11 @@
 相关文章
 
 - [更新日志](http://www.wps.cn/product/wpslinuxlog)
+
+### 移除图片背景
+
+> 可以将图片的背景移除
+
+![](https://www.remove.bg/images/samples/combined/s4.jpg)
+
+[Remove Background from Image](https://www.remove.bg/)
