--- a/docs/2019/0408.md
+++ b/docs/2019/0408.md
@@ -8,15 +8,13 @@
 
 ## 开源项目
 
-### 项目名称
+### kognise/water.css
 
-<Badge text="项目语言" type="tip" vertical="middle"/>
+<Badge text="HTML" type="tip" vertical="middle"/>
 
-> 项目介绍
+> 让网站变得更加漂亮的 css 集合
 
-![图片](https://图片)
-
-[Github](https://github.com/)
+[Github](https://github.com/kognise/water.css)
 
 ## 优秀文章
 
