--- a/docs/2019/0408.md
+++ b/docs/2019/0408.md
@@ -2,9 +2,9 @@
 
 ## 本周要闻
 
-### 新闻标题
+### Python 之父在论坛说 我们能为中国 996 程序员做些什么
 
-[说明](https://网址)
+[Python Discuss](https://discuss.python.org/t/can-we-do-something-for-996-programmers-in-china/1119)
 
 ## 开源项目
 
