--- a/docs/2019/0408.md
+++ b/docs/2019/0408.md
@@ -18,16 +18,16 @@
 
 ## 优秀文章
 
-### 文章标题
+### 玩转 SVG 让设计更出彩
 
-[来源网站](文章链接)
+[ISUX](https://isux.tencent.com/articles/svg-for-web.html)
 
 ## 工具
 
-### 工具/软件名称
+### Edge(Chromium) 浏览器
 
-> 简单介绍
+> 采用 Chromium 内核的 Edge 浏览器，目前仅支持 Windows 10
 
-![图片](https://图片地址)
+![](https://edgetipscdn.microsoft.com/insider-site/images/dl-browser.d80b3a2a.png)
 
-[网址](https://网址)
+[Microsoft Edge Insider](https://www.microsoftedgeinsider.com/en-us/?form=MD18G6&OCID=MD18G6)
