--- a/docs/2019/0408.md
+++ b/docs/2019/0408.md
@@ -16,6 +16,14 @@
 
 [Github](https://github.com/kognise/water.css)
 
+### nefe/You-Dont-Need-jQuery
+
+<Badge text="JavaScript" type="tip" vertical="middle"/>
+
+> 使用原生 javascript 代替 jQuery 来进行 query、style、dom、ajax、event 等的例子。
+
+[Github](https://github.com/nefe/You-Dont-Need-jQuery)
+
 ## 优秀文章
 
 ### 玩转 SVG 让设计更出彩
