--- a/docs/2019/0408.md
+++ b/docs/2019/0408.md
@@ -2,9 +2,13 @@
 
 ## 本周要闻
 
-### Python 之父在论坛说 我们能为中国 996 程序员做些什么
+### Python 之父再为 996 发声
 
 [Python Discuss](https://discuss.python.org/t/can-we-do-something-for-996-programmers-in-china/1119)
+
+### 2019 Stack Overflow 开发者统计报告
+
+[Stack Overflow](https://insights.stackoverflow.com/survey/2019)
 
 ## 开源项目
 
@@ -24,11 +28,25 @@
 
 [Github](https://github.com/nefe/You-Dont-Need-jQuery)
 
+### 1c7/chinese-independent-developer
+
+> 👩🏿‍💻👨🏾‍💻👩🏼‍💻👨🏽‍💻👩🏻‍💻中国独立开发者项目列表 -- 分享大家都在做什么
+
+[Github](https://github.com/1c7/chinese-independent-developer)
+
 ## 优秀文章
 
 ### 玩转 SVG 让设计更出彩
 
 [ISUX](https://isux.tencent.com/articles/svg-for-web.html)
+
+### 30 分钟快速入门 Docker 教程
+
+[juejin](https://juejin.im/post/5cacbfd7e51d456e8833390c)
+
+### 探索Java日志的奥秘：底层日志系统-log4j2
+
+[segmentfault](https://segmentfault.com/a/1190000018823745)
 
 ## 工具
 
