--- a/docs/2019/0408.md
+++ b/docs/2019/0408.md
@@ -10,6 +10,10 @@
 
 [Stack Overflow](https://insights.stackoverflow.com/survey/2019)
 
+### 华为宣布开源 方舟编译器
+
+[知乎讨论](https://www.zhihu.com/question/319688949)
+
 ## 开源项目
 
 ### kognise/water.css
@@ -34,6 +38,14 @@
 
 [Github](https://github.com/1c7/chinese-independent-developer)
 
+### carykh/jumpcutter
+
+<Badge text="Python" type="tip" vertical="middle"/>
+
+> 视频自动剪辑
+
+[Github](https://github.com/carykh/jumpcutter)
+
 ## 优秀文章
 
 ### 玩转 SVG 让设计更出彩
@@ -47,6 +59,10 @@
 ### 探索Java日志的奥秘：底层日志系统-log4j2
 
 [segmentfault](https://segmentfault.com/a/1190000018823745)
+
+### Spring Boot 2.0 WebFlux编程
+
+[mrbird.cc](https://mrbird.cc/Spring-Boot-2-0-WebFlux.html)
 
 ## 工具
 
