--- a/docs/2019/0415.md
+++ b/docs/2019/0415.md
@@ -2,9 +2,9 @@
 
 ## 本周要闻
 
-### 新闻标题
+### 第三届 Vue.js 开发者大会由 Vue.js 官方举办，将于 2019年06月08日 在上海正式开启
 
-[说明](https://网址)
+[w3ctech](https://vue.w3ctech.com/)
 
 ## 开源项目
 
