--- a/docs/2019/0415.md
+++ b/docs/2019/0415.md
@@ -38,6 +38,18 @@
 
 [juejin](https://juejin.im/post/5cb49b686fb9a0689f4c2283)
 
+### 干货：mysql 索引的数据结构
+
+[juejin](https://juejin.im/post/5cb7247df265da03af27ccf9)
+
+### 蚂蚁金服高级研究员阳振坤：为什么我们要选择自研数据库这条艰难之路
+
+[aliyun](https://yq.aliyun.com/articles/698540?utm_content=g_1000052521)
+
+### 法兰西别哭！他用十亿数据帮卡西莫多「找回」他的玫瑰花窗
+
+[微信公众号](https://mp.weixin.qq.com/s/1t7DTSG8yLTR9pG-njLYsA)
+
 ## 工具
 
 ### 工具/软件名称
