--- a/docs/2019/0422.md
+++ b/docs/2019/0422.md
@@ -15,7 +15,15 @@
 
 > Kratos是bilibili开源的一套Go微服务框架，包含大量微服务相关框架及工具。 https://www.bilibili.com
 
-[Github](https://github.com/bilibili/kratos)
+[Github](https://github.com/bilibili/kratos)  
+
+### deeppomf/DeepCreamPy  
+
+> 去马赛克神器DeepCreamPy
+
+[简介小评](https://www.ifanr.com/app/1125827)
+
+[Github](https://github.com/deeppomf/DeepCreamPy)
 
 ## 优秀文章
 
