--- a/docs/2019/0422.md
+++ b/docs/2019/0422.md
@@ -7,6 +7,10 @@
 - [B站回应后台源码泄露事件：为历史版本，已主动防御](https://www.ithome.com/0/420/442.htm)
 - [B站网站后台工程源码泄露 内含部分用户名密码](http://finance.sina.com.cn/roll/2019-04-22/doc-ihvhiqax4426173.shtml)
 
+### 微软和Github员工支持 996 运动
+
+[support.996.ICU](https://github.com/MSWorkers/support.996.ICU)
+
 ## 开源项目
 
 ### bilibili/kratos
@@ -24,6 +28,13 @@
 [简介小评](https://www.ifanr.com/app/1125827)
 
 [Github](https://github.com/deeppomf/DeepCreamPy)
+
+### kasuganosoras/cxk-ball
+
+> 🏀 Javascript 实现的 CXK 打篮球游戏 https://cxk.ssrr.one/
+
+[Github](https://github.com/kasuganosoras/cxk-ball)
+
 
 ## 优秀文章
 
