--- a/docs/2019/0422.md
+++ b/docs/2019/0422.md
@@ -23,6 +23,8 @@
 
 ### deeppomf/DeepCreamPy  
 
+<Badge text="Python" type="tip" vertical="middle"/>
+
 > 去马赛克神器DeepCreamPy
 
 [简介小评](https://www.ifanr.com/app/1125827)
@@ -31,16 +33,29 @@
 
 ### kasuganosoras/cxk-ball
 
+<Badge text="JavaScript" type="tip" vertical="middle"/>
+
 > 🏀 Javascript 实现的 CXK 打篮球游戏 https://cxk.ssrr.one/
 
 [Github](https://github.com/kasuganosoras/cxk-ball)
 
+### cool-RR/PySnooper
+
+<Badge text="Python" type="tip" vertical="middle"/>
+
+> Never use print for debugging again
+
+[Github](https://github.com/cool-RR/PySnooper)
 
 ## 优秀文章
 
 ### 天津wtm之行
 
 [ISLAND](https://youngxhui.top/2019/04/天津wtm之行)
+
+### 程序猿生存指南-63 贪心姑娘
+
+[juejin](https://juejin.im/post/5cbece0bf265da03b44612fc)
 
 ## 工具
 
