--- a/docs/2019/0422.md
+++ b/docs/2019/0422.md
@@ -11,6 +11,18 @@
 
 [support.996.ICU](https://github.com/MSWorkers/support.996.ICU)
 
+### Docker Hub遭入侵
+
+- [Docker Hub遭入侵 19万帐号被泄露](https://www.cnbeta.com/articles/tech/841873.htm)
+
+### 阿里巴巴发布普惠体新字体 
+
+[阿里巴巴字体素材平台](https://alibabafont.taobao.com/wow/alibabafont/act/alifont?spm=a213iq.12741207.8414978282.1.11c2461dd7beht&wh_biz=tm&acm=lb-zebra-476210-6318052.1003.4.5750882&scm=1003.4.lb-zebra-476210-6318052.OTHER_15543966436832_5750882)
+
+### Google IO 2019 
+
+[Google I/O](https://events.google.com/io/)
+
 ## 开源项目
 
 ### bilibili/kratos
@@ -47,6 +59,14 @@
 
 [Github](https://github.com/cool-RR/PySnooper)
 
+### uber-web/baseui
+
+<Badge text="JavaScript" type="tip" vertical="middle"/>
+
+> A React Component library implementing the Base design language https://baseweb.design
+
+[Github](https://github.com/uber-web/baseui)
+
 ## 优秀文章
 
 ### 天津wtm之行
@@ -56,6 +76,10 @@
 ### 程序猿生存指南-63 贪心姑娘
 
 [juejin](https://juejin.im/post/5cbece0bf265da03b44612fc)
+
+### [译] 一文带你玩转 Java8 Stream 流，从此操作集合 So Easy
+
+[juejin](https://juejin.im/post/5cc124a95188252d891d00f2)
 
 ## 工具
 
