--- a/docs/2019/0429.md
+++ b/docs/2019/0429.md
@@ -8,21 +8,21 @@
 
 ## 开源项目
 
-### 项目名称
+### HFO4/gameboy.live
 
-<Badge text="项目语言" type="tip" vertical="middle"/>
+<Badge text="Go" type="tip" vertical="middle"/>
 
-> 项目介绍
+> 🕹️ A basic gameboy emulator with terminal "Cloud Gaming" support http://gameboy.live
 
-![图片](https://图片)
+![图片](https://github.com/HFO4/gameboy.live/raw/master/doc/cloud-gaming.gif)
 
-[Github](https://github.com/)
+[Github](https://github.com/HFO4/gameboy.live)
 
 ## 优秀文章
 
-### 文章标题
+### 如何优化代码中大量的if/else,switch/case?
 
-[来源网站](文章链接)
+[juejin](https://juejin.im/post/5cc6a7fc5188250f015b5843)
 
 ## 工具
 
