--- a/docs/2019/0429.md
+++ b/docs/2019/0429.md
@@ -2,9 +2,9 @@
 
 ## 本周要闻
 
-### 新闻标题
+### Red Hat 修改 Logo
 
-[说明](https://网址)
+[Red Hat 变更说明](https://www.redhat.com/zh/about/brand/new-brand?intcmp=701f20000012hnbAAA)
 
 ## 开源项目
 
