--- a/docs/2019/0429.md
+++ b/docs/2019/0429.md
@@ -18,6 +18,22 @@
 
 [Github](https://github.com/HFO4/gameboy.live)
 
+### liamg/tml
+
+<Badge text="Go" type="tip" vertical="middle"/>
+
+> 🌈💻🎨 A tiny markup language for terminal output. Makes formatting output in CLI apps easier!
+
+[Github](https://github.com/liamg/tml)
+
+### czy36mengfei/tensorflow2_tutorials_chinese 
+
+<Badge text="Jupyter Notebook" type="tip" vertical="middle"/>
+
+> tensorflow2中文教程，持续更新(当前版本:tensorflow2.0)，tag: tensorflow 2.0 tutorials
+
+[Github](https://github.com/czy36mengfei/tensorflow2_tutorials_chinese)
+
 ## 优秀文章
 
 ### 如何优化代码中大量的if/else,switch/case?
@@ -26,10 +42,10 @@
 
 ## 工具
 
-### 工具/软件名称
+### Remote Development
 
-> 简单介绍
+> vsc 远程开发工具
 
-![图片](https://图片地址)
+![图片](https://microsoft.github.io/vscode-remote-release/images/ssh-readme.gif)
 
-[网址](https://网址)
+[visual studio marketplace](https://marketplace.visualstudio.com/items?itemName=ms-vscode-remote.vscode-remote-extensionpack)
