--- a/docs/2019/0429.md
+++ b/docs/2019/0429.md
@@ -40,6 +40,10 @@
 
 [juejin](https://juejin.im/post/5cc6a7fc5188250f015b5843)
 
+### 手把手带你写AR应用--AR尺子预览
+
+[juejin](https://juejin.im/post/5ccdb8d3f265da03a1583c1c)
+
 ## 工具
 
 ### Remote Development
@@ -49,3 +53,13 @@
 ![图片](https://microsoft.github.io/vscode-remote-release/images/ssh-readme.gif)
 
 [visual studio marketplace](https://marketplace.visualstudio.com/items?itemName=ms-vscode-remote.vscode-remote-extensionpack)
+
+###  I18n Translation Search
+
+> 支持 11 国语言搜索，有一千多种语言数据，超 1500 多万条数据，支持报表展示。
+
+相关阅读
+
+- [v2ex](https://www.v2ex.com/t/560751#reply122)
+
+[i18ns](https://i18ns.com/)
