--- a/docs/2019/0506.md
+++ b/docs/2019/0506.md
@@ -10,6 +10,10 @@
 
 [Google IO](https://events.google.com/io/)
 
+### 微软跨平台 UI 库 Fabric
+
+[Microsoft](https://developer.microsoft.com/zh-cn/fabric#/)
+
 ## 开源项目
 
 ### microsoft/Terminal
@@ -28,14 +32,30 @@
 
 [Github](https://github.com/flutter/flutter_web)
 
+### hiroppy/fusuma
+
+<Badge text="JavaScript" type="tip" vertical="middle"/>
+
+> ✍️Fusuma makes slides with Markdown easily. https://hiroppy.github.io/fusuma/intro
+
+[Github](https://github.com/hiroppy/fusuma)
+
 ## 优秀文章
 
 ### flutter web 开发
 
 [ISALND](https://youngxhui.top/2019/05/flutter-web%E5%85%A5%E9%97%A8/)
 
+### Flutter 1.5 发布，正式成为全平台 UI 框架！
+
+[juejin](https://juejin.im/post/5cd397ece51d453ae21957c4)
+
+### [手把手系列之] Docker 部署 vue 项目
+
+[juejin](https://juejin.im/post/5cce4b1cf265da0373719819)
 
 ## 工具
+
 
 ### 工具/软件名称
 
