--- a/docs/2019/0506.md
+++ b/docs/2019/0506.md
@@ -56,11 +56,10 @@
 
 ## 工具
 
+### code2flow
 
-### 工具/软件名称
+> 用代码生成流程图
 
-> 简单介绍
+![图片](https://code2flow.com/images/code2flow-intro-screencast.de7081b.gif)
 
-![图片](https://图片地址)
-
-[网址](https://网址)
+[code2flow](https://code2flow.com/)
